# paxos

./: .codecov.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt  README.md
include/paxos/: bootstrap.hpp  callback.hpp  context.hpp  customhash.hpp  decree.hpp  fields.hpp  file.hpp  handler.hpp  ledger.hpp  lock.hpp  logging.hpp  lru_map.hpp  lru_set.hpp  messages.hpp  parliament.hpp  pause.hpp  queue.hpp  receiver.hpp  replicaset.hpp  roles.hpp  sender.hpp  serialization.hpp  server.hpp  signal.hpp
src/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  bootstrap.cpp  callback.cpp  callback.hpp  context.hpp  decree.cpp  decree.hpp  fields.hpp  handler.cpp  learner.cpp  learner.hpp  ledger.cpp  ledger.hpp  lock.cpp  logging.cpp  logging.hpp  messages.cpp  messages.hpp  parliament.cpp  pause.cpp  paxos.cpp  paxos.hpp  proposer.cpp  proposer.hpp  queue.hpp  receiver.cpp  receiver.hpp  replica.hpp  replicaset.cpp  replicaset.hpp  roles.cpp  roles.hpp  sender.cpp  sender.hpp  serialization.hpp  server.cpp  signal.cpp  updater.cpp  (+1 more)
unittests/: CMakeLists.txt  acceptor_unittest.cpp  bootstrap_unittest.cpp  callback_unittest.cpp  context_unittest.cpp  customhash_unittest.cpp  decree_unittest.cpp  fields_unittest.cpp  handler_unittest.cpp  learner_unittest.cpp  ledger_unittest.cpp  lru_map_unittest.cpp  lru_set_unittest.cpp  messages_unittest.cpp  parliament_unittest.cpp  pause_unittest.cpp  proposer_unittest.cpp  queue_unittest.cpp  receiver_unittest.cpp  replicaset_unittest.cpp  roles_unittest.cpp  sender_unittest.cpp  serialization_unittest.cpp  signal_unittest.cpp
